--- a/explorer_server/templates/table_data_view.html
+++ b/explorer_server/templates/table_data_view.html
@@ -1,9 +1,26 @@
 {{ template "header.html" . }}
 
-<ul>
-    {{ range .records }}
-        <li><a href="/data?table={{ . }}">{{ . }}</a></li>
-    {{ end }}
-</ul>
+{{ if eq (len .columns) 0 }}
+    No data found.
+{{ else }}
+    <table>
+        <thead>
+            <tr>
+                {{ range .columns }}
+                    <td>{{ . }}</td>
+                {{ end }}
+            </tr>
+        </thead>
+        <tbody>
+            {{ range $rcd := .records }}
+                <tr>
+                    <td>{{ $rcd.Email }}</td>
+                    <td>{{ $rcd.Name }}</td>
+                    <td>{{ $rcd.Age }}</td>
+                </tr>
+            {{ end }}
+        </tbody>
+    </table>
+{{ end }}
 
 {{ template "footer.html" . }}
