Add logic to pagination frontend

--- a/explorer_server/templates/_pagination.html
+++ b/explorer_server/templates/_pagination.html
@@ -9,3 +9,14 @@
         </span>
     {{ end }}
 </span>
+<span>
+    <select name="select-limit" id="select-limit">
+        {{ range $l := .limits }}
+            {{ if eq $l $.params.GetLimit }}
+                <option value="{{ $l }}" selected >{{ $l }}</option>
+            {{ else }}
+                <option value="{{ $l }}" >{{ $l }}</option>
+            {{ end }}
+        {{ end }}
+    </select>
+</span>
