--- a/explorer_server/templates/_tables_list.html
+++ b/explorer_server/templates/_tables_list.html
@@ -1,9 +1,12 @@
-<select name="select-table" id="select-table">
-    {{ range .tables }}
-        {{ if eq $.params.GetTableName . }}
-            <option value="{{ . }}" selected >{{ . }}</option>
-        {{ else }}
-            <option value="{{ . }}">{{ . }}</option>
+<span>Table:&nbsp;</span>
+<span>
+    <select name="select-table" id="select-table">
+        {{ range .tables }}
+            {{ if eq $.params.GetTableName . }}
+                <option value="{{ . }}" selected >{{ . }}</option>
+            {{ else }}
+                <option value="{{ . }}">{{ . }}</option>
+            {{ end }}
         {{ end }}
-    {{ end }}
-</select>
+    </select>
+</span>
