Set assets and templates path as params when init explorer server

--- a/explorer_server/templates/list_all_tables.html
+++ b/explorer_server/templates/list_all_tables.html
@@ -2,7 +2,7 @@
 
 <ul>
     {{ range $table, $recordCount := .tables }}
-        <li><a href="/data?table={{ $table }}">{{ $table }} ({{ $recordCount }} record(s))</a></li>
+        <li><a href="/data?table={{ $table }}">{{ $table }} - {{ $recordCount }} record(s)</a></li>
     {{ end }}
 </ul>
 
