Add title to list_all_tables.html

--- a/explorer_server/templates/list_all_tables.html
+++ b/explorer_server/templates/list_all_tables.html
@@ -1,5 +1,5 @@
 {{ template "header.html" . }}
-
+<h3>{{ .title }}</h3>
 <ul>
     {{ range $table, $recordCount := .tables }}
         <li><a href="/data?table={{ $table }}">{{ $table }} - {{ $recordCount }} record(s)</a></li>
